--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Changelog & Version
+name: Update Changelog & Version
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   release:
-    name: Changelog & Version
+    name: Update Changelog & Version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
