--- a/.github/workflows/conventional-commit.yml
+++ b/.github/workflows/conventional-commit.yml
@@ -2,6 +2,9 @@ name: Check PR title
 on:
   pull_request:
     types: [opened, reopened, synchronize, edited]
+  push:
+    branches:
+      - 'main'
 
 jobs:
   lint:
@@ -9,4 +12,4 @@ jobs:
     steps:
       - uses: aslafy-z/conventional-pr-title-action@v3
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
